--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,13 +1,14 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  height: 100vh;
-  margin: 16rem auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  position: absolute;
 
   display: flex;
   flex-direction: column;
-
   align-items: center;
 }
 
