--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,13 +3,12 @@
 #app {
   max-width: 1280px;
   height: 100vh;
-  margin: 0 auto;
+  margin: 16rem auto;
 
   display: flex;
   flex-direction: column;
 
   align-items: center;
-  justify-content: center;
 }
 
 .inspect {
